# perfgen

./: .gitignore  README.md  flight-log-profiler-design.md  package-lock.json  package.json  vitest.config.js  wrangler.toml
.github/workflows/: ci.yml
public/: index.html
public/js/: aggregate.js  app.js  buckets.js  db.js  dedupe.js  math.js  wasm-bridge.js
tests/: aggregate.test.js  buckets.test.js  csv-parse.test.js  dedupe.test.js  math.test.js
wasm-engine/: Cargo.toml
wasm-engine/src/: lib.rs
worker/src/: index.ts
